# bbcalc

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  main.cc
.github/workflows/: coverage-coveralls.yml
calc/: ast.cc  binary.cc  binary.h  calc.cc  calc.h  errorhandler.cc  errorhandler.h  input.h  lexer.cc  output.cc  parser.cc  str.h
cli/: main.cc
examples/: CMakeLists.txt
src/: CMakeLists.txt
src/calc/: ast.h  calc.cc  errorhandler.cc  ints.cc  ints.h  lexer.cc  lexer.h  output.h  parser.cc  parser.h  str.cc  token.cc  token.h
test/: test_calc.cc
tests/: CMakeLists.txt  test_calc.cc
